# sledge

./: .gitignore  MANIFEST.in  README.md  build.zig.zon  config.py  fonce.code-workspace  pyproject.toml  requirements.txt  setup.py  todo
sledge/: __main__.py
sledge/browser/: browser.py  core.py  downloads.py  gleam.py  history.py  security.py  tabs.py  theme.py  webview.py  window.py
sledge/browser/components/: video_player.py  video_tab.py
sledge/browser/extensions/: __init__.py  background.py  html_handler.py  js_engine.py  manager.py  runtime.py  storage.py  ui.py
sledge/browser/extensions/api/: __init__.py
sledge/browser/security/: __init__.py  interceptor.py  panel.py
sledge/browser/security/defense/: browser.py  event_handler.py  monitor.py
sledge/browser/security/defense/lib/sledge/: application.ex
sledge/browser/security/defense/lib/sledge/security/: browser_security.ex  content_security.ex  fonce_integration.ex
sledge/browser/security/monitoring/: lightweight_agent.py  protection.py
sledge/browser/security/security/: fonce_client.py
sledge/browser/tabs/: __init__.py  debug.py  dialogs.py  groups.py  memory.py  ring_menu.py  spread_view.py  states.py  widgets.py
sledge/browser/ui/: dialogs.py  navbar.py  style_panel.py  styles.py  widgets.py
sledge/docs/: README.md  development.md  extension_api.md  roadmap.md  security.md
src/tools/: settings_manager.py
src/widgets/: explorer.py  settings_dialog.py  toolbar.py
tests/: test_tabs.py
