[project]
name = "sledge-browser"
version = "0.1.0"
description = "A powerful, secure web browser with advanced tab management"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.6.1",
    "PyQt6-WebEngine>=6.6.1",
    "PyQt6-Qt6>=6.6.1",
    "PyQt6-WebEngine-Qt6>=6.6.1",
    "cryptography>=39.0.0",
    "psutil>=6.1.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sledge"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
sledge = "sledge.browser.core:main"

[tool.ruff]
line-length = 88
target-version = "py38"
